--- a/src/main/webapp/detail.html
+++ b/src/main/webapp/detail.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/detail.css}">
-    <script th:src="@{/js/index.js}"></script>
     <script>
         function delReply(replyId,topicId) {
             if (confirm("是否确认删除？")) {
@@ -48,7 +47,7 @@
                   </td>
                   <td class="topic_title">
                       <span class="titles" th:text="${session.topic.title}">《萧某今天就和天下群雄决一死战，你们一起上吧！》</span>
-                      <span class="title_date_right time" th:text="${session.topic.topicDate}">2021-09-01 12:30:55</span>
+                      <span class="title_date_right time" th:text="${#dates.format(session.topic.topicDate,'yyyy-MM-dd HH:mm:ss')}">2021-09-01 12:30:55</span>
                   </td>
               </tr>
               <tr>
@@ -68,7 +67,7 @@
                   <td class="reply_title">
                       <span class="titles" th:text="|回复：${session.topic.title}|">回复：萧某今天就和天下群雄决一死战，你们一起上吧！</span>
                       <button type="button" class="btn-close" aria-label="Close" th:if="${reply.author.id == session.userBasic.id || session.userBasic.id == session.friend.id}" th:onclick="|delReply(${reply.id},${session.topic.id})|"></button>
-                      <span class="title_date_right time" th:text="${reply.replyDate}">2021-09-01 14:35:15</span>
+                      <span class="title_date_right time" th:text="${#dates.format(reply.replyDate,'yyyy-MM-dd HH:mm:ss')}">2021-09-01 14:35:15</span>
                   </td>
               </tr>
               <tr>
@@ -76,7 +75,7 @@
                       <span th:text="${reply.content}">你可曾见过边关之上、宋辽相互仇杀的惨状？可曾见过宋人辽人妻离子散、家破人亡的情景？宋辽之间好容易罢兵数十年, 倘若刀兵再起, 契丹铁骑侵入南朝, 你可知将有多少宋人惨遭横死？多少辽人死于非命？!</span><br/>
                       <ul class="ul" th:if="${reply.hostReply != null}">
                           <li th:text="${reply.hostReply.content}">你以为我是慕容复的人，所以和我比试？段兄弟年纪轻轻，就有如此武学修为，实属罕见！武林早已盛传大理段氏有一门绝学，叫六脉神剑，能以无形剑气杀人，果然真有此门神功！</li>
-                          <li class="time" th:text="|主人回复于${reply.hostReply.hostReplyDate}|">主人回复于2021/10/01 11:50:30</li>
+                          <li class="time" th:text="|主人回复于${#dates.format(reply.hostReply.hostReplyDate,'yyyy-MM-dd HH:mm:ss')}|">主人回复于2021/10/01 11:50:30</li>
                       </ul>
                       <a th:href="@{|/reply.do?operate=hostReply&replyId=${reply.id}|}" class="master" th:unless="${reply.hostReply != null || session.userBasic.id != session.topic.author.id}">主人回复</a>
                   </td>
