--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" th:href="@{/bootstrap-5.1.3-dist/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/common.css}">
     <link rel="stylesheet" th:href="@{/css/index.css}">
-    <script th:src="@{/js/index.js}"></script>
     <script>
         function delTopic(topicId) {
             if (confirm("是否确认删除日志？")) {
@@ -53,7 +52,7 @@
                   <tr th:unless="${#lists.isEmpty(session.friend.topicList)}" th:each="topic : ${session.friend.topicList}">
                     <th scope="row" th:text="${topic.id}">1</th>
                     <td><a th:href="@{|/topic.do?operate=topicDetail&id=${topic.id}|}" th:text="${topic.title}">萧某今天就和群雄决一死战，你们一起上吧！</a></td>
-                    <td th:text="${topic.topicDate}" class="time">2022-08-07 20:50:55</td>
+                    <td th:text="${#dates.format(topic.topicDate,'yyyy-MM-dd HH:mm:ss')}" class="time">2022-08-07 20:50:55</td>
                     <td>
                         <svg th:if="${session.userBasic.id == session.friend.id}" th:onclick="|delTopic(${topic.id})|" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-circle" viewBox="0 0 16 16">
                             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
